Develop (#19)
* Feature/initial scaffolding (#1)

* adding git actions

* initial scaffolding

* adding pr template

* add dependencies (#3)

* Feature/create user (#5)

* changes

* create user

* Feature/create commerce (#6)

* changes

* create user

* creando branch

* campaing

* refactor dtos

* commerce logic

* fix

* Feature/create purchase (#8)

* changes

* create user

* creando branch

* campaing

* refactor dtos

* commerce logic

* fix

* rm dto

* Develop (#7)

* Feature/initial scaffolding (#1)

* adding git actions

* initial scaffolding

* adding pr template

* add dependencies (#3)

* Feature/create user (#5)

* changes

* create user

* Feature/create commerce (#6)

* changes

* create user

* creando branch

* campaing

* refactor dtos

* commerce logic

* fix

* purchase

* purchase

* Feature/add swagger (#10)

* changes

* adding swaggo

* changes

* User feature (#12)

* register purchase

* changes

* changes

* changes

* changes

* fix

* fix

* rm err

* change

* clean (#14)

* Clean (#16)

* clean

* change

* domaion clean

* testing (#18)

* testing

* lint

* swagger

* lint
